# Multi-modal-AI-Knowledge-Base-Platform

./: .env.example  .gitignore  RAG_Platform_ProjectPlan.md  README.md  STEP1_SUMMARY.md  Step_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.docker  .env.docker.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  documents.py  query.py  sessions.py
backend/app/core/: exceptions.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 3b30b4af805b_init_all_tables.py
backend/app/models/: __init__.py  chat_session.py  document.py  message.py  user.py
backend/app/rag/: chroma_adapter.py  chunk_id_patch.py  conversation_compactor.py  embedding_adapter.py  engine.py  llm_adapter.py
backend/app/repositories/: __init__.py  base.py  document_repository.py  message_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: auth.py  document.py  message.py  query.py  session.py
backend/app/services/: auth_service.py  chat_session_service.py  conversation_service.py  document_service.py  rag_query_service.py
backend/chroma/: chroma.sqlite3
backend/scripts/: start_backend.sh  wait_for_dependencies.py
backend/tests/: conftest.py  test_auth.py  test_chunk_id_patch.py  test_conversation.py  test_documents.py  test_query.py  test_rag_adapters.py  test_sessions.py
frontend/: .dockerignore  Dockerfile  (+2 more)
(+30 files in other folders)
